# claude-docs

./: .gitignore  CLAUDE.md  README.md  doc-recall-test-results.md  install.sh  package-lock.json  package.json  pyproject.toml  query.py  server.py  uninstall.sh
.claude/docs/: agent-frontmatter-schema.md  app-layout.md  architecture.md  beads-cli-removal-map.md  beads-update-system.md  chat-session-lifecycle.md  explore-limitations.md  hmr-and-module-reload-state-persistence.md  logging-conventions.md  markdown-rendering-pattern.md  mcp-tool-availability.md  planner-agent-cli-flags.md  provider-adapter-architecture.md  socket-io-architecture.md  sse-connection-management.md  superforms-zod-validation.md  svelte5-keyed-each-prepend-bug.md  ui-component-stack.md
.claude/docs/architecture/: events-and-epic-lifecycle.md
.claude/docs/database/: beads-cli-data-models.md  project-db-architecture.md
.claude/docs/dev-server/: tmux-management.md
.claude/docs/electron/: browserview-preview.md  build-and-packaging.md  opening-external-urls.md  server-subprocess-crash-diagnostics.md  subscription-license-flow.md
.claude/docs/kommandr/: postgresql-store-sql-conventions.md
.claude/docs/mcp/: ask-user-flow-and-debugging.md  kommandr-server-node-path.md
.claude/docs/shopify/: collection-filters-api.md  event-content-section.md  fbt-tag-convention.md  javascript-blocks-vs-inline-scripts.md  metaobject-graphql-api.md  school-color-system.md  svg-icon-conventions.md  theme-check-cli.md  (+1 more)
hooks/: claude-docs-on-prompt.sh
scripts/: postinstall.mjs
src/: index.ts
(+2 files in other folders)
