[project]
name = "claude-docs"
version = "2.0.0"
description = "MCP server giving Claude a persistent, per-project knowledge base with semantic search"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "mcp[cli]>=1.0.0",
    "watchdog>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
